--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
     <title>Vue.js starter</title>
 </head>
 <body>
-<div id="app"></div>
+<div id="app">
+    <navigation></navigation>
+    <div class="container">
+        <router-view></router-view>
+    </div>
+</div>
+
 </body>
 </html>
