Introduce Loader-component to main, watch UI-changes & display Loader accordingly

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 <div id="app">
+
   <navigation></navigation>
+
+  <loader v-show="UI.get('isLoading')"></loader>
+
   <div class="container">
     <router-view></router-view>
   </div>
